feat(./src/modules/options): add option feature
you can now define extra options for each of your categories
