# src/common/router.ts
@@ -1,6 +1,7 @@
 import authRouter from '$app/modules/auth/auth.routes';
 import categoryRouter from '$app/modules/category/category.routes';
 import userRouter from '$app/modules/user/user.routes';
+import optionRouter from '$app/modules/option/option.routes';
 import { type Request, type Response, Router } from 'express';
 
 const router = Router();
@@ -15,6 +16,8 @@ router.get('/health', async (_req: Request, res: Response) => {
 
 router.use('/auth', authRouter);
 router.use('/user', userRouter);
+
 router.use('/category', categoryRouter);
+router.use('/option', optionRouter);
 
 export default router;
